# cdn-payroll

./: Cargo.toml  README.md
src/: basic_personal_income.rs  federal_income_tax.rs  income_tax.rs  lib.rs  other_deductions.rs  utils.rs
src/provincial_income_tax/: mod.rs  ontario.rs  provincial_income_tax.rs
src/year/: v2025.rs
