[package]
name = "cdn-payroll"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Canadian Payroll Library"
homepage = "https://statbook.io"
readme = "./README.md"
repository = "https://github.com/MrCartaaa/cdn-payroll"
authors = ["Carter Steele <office@statbook.io"]
keywords = ["Payroll-Tax", "Canadian-Payroll", "Payroll", "Tax"]

[lib]
path = "src/lib.rs"

[dependencies]
